--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Enable PowerShell Script Execution
+        run: Set-ExecutionPolicy RemoteSigned -Scope Process
+        shell: pwsh
+
       - name: Set Up Python
         uses: actions/setup-python@v5
         with:
