--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          if -f requirements.txt ; then pip install -r requirements.txt; fi
+          if (Test-Path requirements.txt) {pip install -r requirements.txt}
 
       - name: Run Python Script
         run: python test1.py  # Replace with your Python file name
