--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Set powershell execution policy
         run: |
           Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass -Force
+        shell: powershell
 
       - name: Set Up Python
         uses: actions/setup-python@v5
-        shell: pwsh
         with:
           python-version: '3.13'
 
