change the workflow to run on wsl runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,16 +17,10 @@ jobs:
       #    Set-ExecutionPolicy -Scope CurrentUser -ExecutionPolicy Bypass -Force
       #  shell: pwsh
 
-      - name: Get powershell execution policy
-        run: |
-          Get-ExecutionPolicy -l
-        shell: pwsh
-
-
-      #- name: Set up Python 3.13
-      #  uses: actions/setup-python@v5
-      #  with:
-      #    python-version: '3.13'
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
 
       - name: Install Dependencies
         run: |
@@ -34,8 +28,3 @@ jobs:
 
       - name: Run Python Script
         run: python test1.py  # Replace with your Python file name
-
-      - name: Un-set powershell execution policy
-        run: |
-          Set-ExecutionPolicy -Scope CurrentUser -ExecutionPolicy Undefined -Force
-        shell: pwsh
