--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          if (Test-Path requirements.txt) {pip install -r requirements.txt}
+          if [ -f requirements.txt ]; then  pip install -r requirements.txt fi
 
       - name: Run Python Script
         run: python test1.py  # Replace with your Python file name
